[gd_scene load_steps=30 format=3 uid="uid://cq6y8xomtxw74"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_hkqh2"]
[ext_resource type="Texture2D" uid="uid://brgcnplvtpqrk" path="res://Art/characters.png" id="2_0rfdr"]
[ext_resource type="Texture2D" uid="uid://dicvqqhg6y20h" path="res://Art/explosion.png" id="2_eymae"]
[ext_resource type="AudioStream" uid="uid://jj2fujd7gxsf" path="res://Sounds/explodemini.wav" id="4_ful8b"]
[ext_resource type="Texture2D" uid="uid://by7qv60k45qsl" path="res://Art/swoosh.png" id="5_41mr0"]
[ext_resource type="PackedScene" uid="uid://jtpny2ydlj12" path="res://Scenes/dash.tscn" id="6_1n1fm"]
[ext_resource type="Script" path="res://Scenes/FootStepPlayer.gd" id="7_xejka"]
[ext_resource type="AudioStream" uid="uid://dq2vxd7w7e4lf" path="res://Sounds/foom_0.wav" id="8_52tpj"]
[ext_resource type="AudioStream" uid="uid://wm81d52tji4j" path="res://Sounds/sword sound.wav" id="9_715h0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5t80"]
size = Vector2(15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvge1"]
atlas = ExtResource("2_0rfdr")
region = Rect2(320, 36, 31, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_inv4g"]
atlas = ExtResource("2_0rfdr")
region = Rect2(352, 36, 31, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve1c8"]
atlas = ExtResource("2_0rfdr")
region = Rect2(384, 36, 31, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ye7i"]
atlas = ExtResource("2_eymae")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ct0q"]
atlas = ExtResource("2_eymae")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dikk7"]
atlas = ExtResource("2_eymae")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_phivq"]
atlas = ExtResource("2_eymae")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfk51"]
atlas = ExtResource("2_eymae")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua2bg"]
atlas = ExtResource("2_0rfdr")
region = Rect2(1, 37, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggehw"]
atlas = ExtResource("2_0rfdr")
region = Rect2(128, 37, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_088dp"]
atlas = ExtResource("2_0rfdr")
region = Rect2(160, 37, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5vhf"]
atlas = ExtResource("2_0rfdr")
region = Rect2(33, 37, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eklq8"]
atlas = ExtResource("2_0rfdr")
region = Rect2(65, 37, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_trufx"]
atlas = ExtResource("2_0rfdr")
region = Rect2(97, 37, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qhstv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvge1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inv4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve1c8")
}],
"loop": true,
"name": &"char_slash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ye7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ct0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dikk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phivq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfk51")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua2bg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggehw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_088dp")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua2bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5vhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eklq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trufx")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1cdgw"]
size = Vector2(16.333, 16)

[sub_resource type="Animation" id="Animation_dvbca"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 32, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponCollision/CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(18.9167, 42.1667)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponCollision/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7.208, 2.08165e-12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponCollision/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3xdyw"]
resource_name = "slash"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(128, 2.08165e-12, 32, 32), Rect2(2.08165e-12, 2.08165e-12, 32, 32), Rect2(32, 2.08165e-12, 32, 32), Rect2(64, 2.08165e-12, 32, 32), Rect2(96, 2.08165e-12, 32, 32), Rect2(128, 2.08165e-12, 32, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponCollision/CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(16.333, 16), Vector2(18.9167, 42.1667), Vector2(18.271, 30), Vector2(17.625, 25), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponCollision/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(7.20833, -4.75), Vector2(7.208, 2.08165e-12), Vector2(7.208, 5), Vector2(7.208, 5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponCollision/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.45),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7k1ds"]
_data = {
"RESET": SubResource("Animation_dvbca"),
"slash": SubResource("Animation_3xdyw")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_hkqh2")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_d5t80")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qhstv")
animation = &"idle"

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ful8b")

[node name="SlashSprite" type="Sprite2D" parent="."]
position = Vector2(16, -1.66667)
texture = ExtResource("5_41mr0")
region_enabled = true
region_rect = Rect2(128, 2.08165e-12, 32, 32)

[node name="WeaponCollision" type="Area2D" parent="SlashSprite" groups=["slash"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlashSprite/WeaponCollision" groups=["slash"]]
position = Vector2(7.20833, -4.75)
shape = SubResource("RectangleShape2D_1cdgw")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../SlashSprite")
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_7k1ds")
}

[node name="Dash" parent="." instance=ExtResource("6_1n1fm")]

[node name="FootStepPlayer" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("7_xejka")

[node name="DashPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_52tpj")

[node name="SlashPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_715h0")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="SlashSprite/WeaponCollision" to="." method="_on_weapon_collision_body_entered"]
[connection signal="dash_ended" from="Dash" to="." method="_on_dash_ended"]
